<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>functional.tests</groupId>
    <artifactId>functional.tests</artifactId>
    <version>0.0.1</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <profiles>
        <!-- Master Detail JS App Profiles-->
        <profile>
            <id>nsplay.emu.default.api23</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api23.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api19</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api19.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api21</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api21.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api22</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api22.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api24</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api24.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api25</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api25.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api26</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api26.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api27</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api27.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.emu.default.api28</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api28.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.sim.Ipad5thgeneration.ios10</id>
            <properties>
                <app.config>nsplay/nsplay.sim.Ipad5thgeneration.ios10.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.sim.iphone7.ios10</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7.ios10.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.sim.iphone7.ios11</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7.ios11.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.sim.iphone7.ios12</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7.ios12.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.sim.iphone6.ios93</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone6.ios93.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplay.sim.iphone7Plus.ios10</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7Plus.ios10.properties</app.config>
                <testsuite>nsplay</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api23</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api23.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api19</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api19.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api21</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api21.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api22</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api22.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api24</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api24.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api25</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api25.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api26</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api26.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api27</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api27.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.emu.default.api28</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.emu.default.api28.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.sim.Ipad5thgeneration.ios10</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.sim.Ipad5thgeneration.ios10.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.sim.iphone7.ios10</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.sim.iphone7.ios10.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.sim.iphone7.ios11</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.sim.iphone7.ios11.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.sim.iphone7.ios12</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.sim.iphone7.ios12.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.sim.iphone6.ios93</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.sim.iphone6.ios93.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>nsplaydev.sim.iphone7Plus.ios10</id>
            <properties>
                <app.config>nsplaydev/nsplaydev.sim.iphone7Plus.ios10.properties</app.config>
                <testsuite>nsplaydev</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api21</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api21.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api22</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api22.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api24</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api24.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api25</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api25.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api26</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api26.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api27</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api27.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api28</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api28.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api19</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api19.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.sim.iphone7.ios11</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7.ios11.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.sim.iphone7.ios12</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7.ios12.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.sim.iphone7.ios10</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone7.ios10.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.sim.iphone6.ios93</id>
            <properties>
                <app.config>nsplay/nsplay.sim.iphone6.ios93.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
        <profile>
            <id>live-sync.emu.default.api23</id>
            <properties>
                <app.config>nsplay/nsplay.emu.default.api23.properties</app.config>
                <testsuite>live-sync</testsuite>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.sikulix</groupId>
            <artifactId>sikulixapi</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>functional.tests.core</groupId>
            <artifactId>functional.tests.core</artifactId>
            <version>0.0.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/functional.tests.core-0.0.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.10</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.saxon</groupId>
            <artifactId>saxon</artifactId>
            <version>8.7</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <properties>
                        <!-- <property>
                            <name>surefire.testng.verbose</name>
                            <value>10</value>
                        </property> -->
                    </properties>
                    <suiteXmlFiles>
                        <suiteXmlFile>resources/suites/${testsuite}.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                        <appConfig>resources/config/${app.config}</appConfig>
                        <user.dir>/Users/vmutafov/work/playground/tests/playground-tests</user.dir>
                    </systemPropertyVariables>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <!-- <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration> -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <configuration>
                            <tasks>
                                <property name="basedir" value="."/>
                                <property name="LIB" value="${basedir}/libs"/>
                                <delete dir="${basedir}/target/surefire-reports/html">
                                </delete>
                                <mkdir dir="${basedir}/target/surefire-reports/html">
                                </mkdir>
                                <xslt in="${basedir}/target/surefire-reports/testng-results.xml"
                                      style="${basedir}/resources/report/testng-results.xsl"
                                      out="${basedir}/target/surefire-reports/html/index.html">
                                    <param expression="${basedir}/target/surefire-reports/html/"
                                           name="testNgXslt.outputDir"/>
                                    <param expression="true" name="testNgXslt.sortTestCaseLinks"/>
                                    <param expression="FAIL,SKIP,PASS,BY_CLASS" name="testNgXslt.testDetailsFilter"/>
                                    <param expression="true" name="testNgXslt.showRuntimeTotals"/>
                                    <classpath location="${net.sf.saxon:saxon:jar}"/>
                                </xslt>
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>